syntax = "proto3";

option java_multiple_files = true;
option java_package = "helmsley.vr.proto";
option java_outer_classname = "inspectorSyncProto";
option objc_class_prefix = "TRP";

package helmsley;
import "common.proto";


enum ReqType{
    SET = 0;
    GET = 1;
}
message VPMsg{
    int32 client_id = 1;
    ReqType req_type = 2;
    enum VPType{
        POS = 0;
        SCALE = 1;
        ROT = 2;
    }
    VPType volume_pose_type = 3;
    repeated float values = 4;
}
message GestureOp{
    enum OPType{
        TOUCH_DOWN = 0;
        TOUCH_MOVE = 1;
        SCALE = 2;
        PAN=3;
    }
    int64 gid = 1;
    OPType type = 2;
    float x = 3;
    float y = 4;
}
message OperationBatch{
    float bid = 1;
    repeated GestureOp gesture_op = 2;
}
service inspectorSync{
    rpc startBroadcast(Request) returns(commonResponse);

    rpc gsVolumePose(VPMsg) returns(commonResponse);
    rpc setGestureOp(GestureOp) returns(commonResponse);
    rpc getOperations(Request) returns(OperationBatch);
}